Fix header shift problem

--- a/css/index.css
+++ b/css/index.css
@@ -14,9 +14,8 @@ ul {
 	border: 2px solid;
 	list-style: none;
 	padding: 0;
-	height: 500px;
-	max-height: 500px;
-	overflow: auto;
+	height: 100%;
+	max-height: 100%;
 	background-color: #B5B1B2
 }
 
@@ -40,6 +39,8 @@ li {
 
 .list-div {
 	width: 150px;
+	height: 500px;
+	max-height: 500px;
 }
 
 .gotten {
@@ -72,6 +73,10 @@ li {
 }
 
 #item-list {
+}
+
+.section-header {
+	height: 30px;
 }
 
 #coupons {
